# dave_work

./: README.md  praesentation_digitaler_berater.md
rasa-chatbot/: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.shell.yml  docker-compose.yml  dockerfile  dockerfile.actions  pyproject.toml
rasa-chatbot/rasa_bot/: config.yml  endpoints.docker.yml  endpoints.yml
rasa-chatbot/rasa_bot/actions/: actions.py
rasa-chatbot/rasa_bot/custom_components/: spellchecking.py
rasa-chatbot/rasa_bot/data/: faq_nlu.yml  nlu.yml  nlu_address.yml  rules.yml  stories.yml
rasa-chatbot/rasa_bot/domain/: domain.yml  form_domain.yml
rasa-chatbot/rasa_bot/tests/: test_stories_cancel.yml  test_stories_phpv.yml
springai-chatbot/: .gitignore  .gitlab-ci.yml  README.md  compose.yml  pom.xml
springai-chatbot/init-scripts/: init.sql
springai-chatbot/src/main/java/de/adesso/ai/digitalerberater/: Application.java
springai-chatbot/src/main/java/de/adesso/ai/digitalerberater/global/: GlobalExceptionHandler.java
springai-chatbot/src/main/java/de/adesso/ai/digitalerberater/thymeleaf/: ThymeleafConversationController.java  (+1 more)
springai-chatbot/src/main/resources/: application.yaml
springai-chatbot/src/main/resources/config/: dialogue.yaml
springai-chatbot/src/main/resources/docs/allgemein/: neu.txt  versicherungen.txt
springai-chatbot/src/main/resources/docs/haftpflicht/: intro.txt  requirements.txt
springai-chatbot/src/main/resources/static/css/: bootstrap.min.css  chat.min.css
springai-chatbot/src/main/resources/templates/: chat.html
(+57 files in other folders)
